testsuite/poke.pkl/cast-array-diag-4.pk
/* { dg-do compile } */

deftype Matrix = int[2][2];
defvar a = [[1,2,3],[4,5,6]] as Matrix; /* { dg-error "" } */
